[gd_scene load_steps=8 format=2]

[ext_resource path="res://Bar.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://Ball.gd" type="Script" id=3]
[ext_resource path="res://BreakoutTest.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 31, 15 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 107.5, 507.5 )

[sub_resource type="CircleShape2D" id=3]
radius = 17.1172

[node name="BreakoutTest" type="Node2D"]
script = ExtResource( 4 )

[node name="Bar" type="KinematicBody2D" parent="." groups=["Bar"]]
position = Vector2( -1, 255 )
script = ExtResource( 1 )
speed = 360

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bar"]
position = Vector2( 0, 16 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="Bar"]
position = Vector2( 0, 16 )
scale = Vector2( 1, 0.5 )
texture = ExtResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="RightArea" type="Area2D" parent="." groups=["Right"]]
position = Vector2( 0, -133 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightArea"]
position = Vector2( 611, 140 )
shape = SubResource( 2 )

[node name="LeftArea" type="Area2D" parent="." groups=["Left"]]
position = Vector2( -1224, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftArea"]
position = Vector2( 611, -1.75 )
shape = SubResource( 2 )

[node name="TopArea" type="Area2D" parent="." groups=["Top"]]
position = Vector2( 0, -403 )
rotation = 1.5708

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopArea"]
position = Vector2( 0, -1.5 )
shape = SubResource( 2 )

[node name="BottomArea" type="Area2D" parent="." groups=["Bottom"]]
position = Vector2( 0, 406 )
rotation = 1.5708

[node name="CollisionShape2D" type="CollisionShape2D" parent="BottomArea"]
position = Vector2( 0, -1.5 )
shape = SubResource( 2 )

[node name="Ball" type="Area2D" parent="."]
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ball"]
shape = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="Ball"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )

[node name="Bricks" type="Node2D" parent="."]

[connection signal="body_entered" from="RightArea" to="Bar" method="_on_RightArea_body_entered"]
[connection signal="body_exited" from="RightArea" to="Bar" method="_on_RightArea_body_exited"]
[connection signal="body_entered" from="LeftArea" to="Bar" method="_on_LeftArea_body_entered"]
[connection signal="body_exited" from="LeftArea" to="Bar" method="_on_LeftArea_body_exited"]
[connection signal="area_entered" from="Ball" to="Ball" method="_on_Ball_area_entered"]
[connection signal="body_entered" from="Ball" to="Ball" method="_on_Ball_body_entered"]
[connection signal="body_exited" from="Ball" to="Ball" method="_on_Ball_body_exited"]
